---
title: Magic Film — Modelo Entidad-Relación v1.1
---
erDiagram

    USUARIOS {
        int id PK
        varchar nombre_usuario
        varchar email
        varchar password_hash
        varchar nombre_completo
        enum rol
        enum nivel_cinefilo
        boolean onboarding_completo
        boolean activo
        timestamp creado_en
        timestamp actualizado_en
    }

    GENEROS {
        int id PK
        varchar nombre
        timestamp creado_en
    }

    USUARIO_GENEROS {
        int usuario_id FK
        int genero_id FK
    }

    PELICULAS {
        int id PK
        int tmdb_id
        varchar titulo
        varchar titulo_original
        year anio
        varchar director
        smallint duracion_min
        text sinopsis
        bigint presupuesto
        bigint recaudacion
        decimal calificacion
        varchar poster_url
        json keywords
        enum tipo_analisis
        boolean tipo_forzado
        boolean activa
        timestamp creado_en
        timestamp actualizado_en
    }

    PELICULA_GENEROS {
        int pelicula_id FK
        int genero_id FK
    }

    ANALISIS {
        int id PK
        int pelicula_id FK
        enum tipo
        varchar modelo_ia
        enum estado
        varchar idioma
        boolean eliminado
        timestamp generado_en
        timestamp actualizado_en
    }

    CAPAS_ANALISIS {
        int id PK
        int analisis_id FK
        enum modo
        enum nombre_capa
        longtext contenido
        tinyint orden
    }

    FAVORITOS {
        int id PK
        int usuario_id FK
        int pelicula_id FK
        timestamp guardado_en
    }

    HISTORIAL_BUSQUEDAS {
        int id PK
        int usuario_id FK
        varchar termino_buscado
        int pelicula_id FK
        timestamp buscado_en
    }

    HISTORIAL_ADMIN {
        int id PK
        int admin_id FK
        enum accion
        varchar entidad
        int entidad_id
        varchar detalle
        timestamp realizado_en
    }

    LOG_IA {
        int id PK
        int analisis_id FK
        text prompt_usado
        int tokens_estimados
        int tiempo_ms
        timestamp creado_en
    }

    USUARIOS ||--o{ USUARIO_GENEROS      : "selecciona"
    GENEROS  ||--o{ USUARIO_GENEROS      : "elegido por"

    PELICULAS ||--o{ PELICULA_GENEROS    : "tiene"
    GENEROS   ||--o{ PELICULA_GENEROS    : "clasifica"

    PELICULAS ||--|| ANALISIS            : "tiene uno"
    ANALISIS  ||--o{ CAPAS_ANALISIS      : "se divide en"
    ANALISIS  ||--o{ LOG_IA             : "registra"

    USUARIOS  ||--o{ FAVORITOS           : "guarda"
    PELICULAS ||--o{ FAVORITOS           : "guardada en"

    USUARIOS  ||--o{ HISTORIAL_BUSQUEDAS : "genera"
    PELICULAS ||--o{ HISTORIAL_BUSQUEDAS : "aparece en"

    USUARIOS  ||--o{ HISTORIAL_ADMIN     : "realiza"
